# research-assistant

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  Pipfile  README.md  README.rst  SECURITY.md  manage.py  setup.cfg  tox.ini  windows.iss
.github/ISSUE_TEMPLATE/: bug_report.md
docs/source/: about.rst  api.rst  conf.py  index.rst  jsdoc_conf.json  modules.rst  references.rst  tests.rst  tests.test_levenshtein.rst  tests.test_matrices.rst  transcriptionist.constants.rst  transcriptionist.levenshtein.rst  transcriptionist.matrices.rst  transcriptionist.rst
docs/source/_static/: style.css
docs/source/api/: index.rst
docs/source/developers/: building.rst  contributing.rst  index.rst  manage.py.rst  roadmap.rst  setup.rst
docs/source/tutorials/: index.rst  localisation-translations.rst  translating-tasks.rst
docs/source/users/: collecting-data.rst  collecting-responses.rst  configuration.rst  data-setup.rst  discarding-attempts.rst  excludable-questions.rst  exporting-data.rst  getting-started.rst  index.rst  installation.rst  locking-app.rst  memory-game.rst  research-task-agt.rst  research-task-atol.rst  research-task-lsbqe.rst  research-task-memory.rst  sequencing.rst  system-requirements.rst  troubleshooting.rst  user-interface.rst
lart_research_client/: __init__.py  app.py  booteel.py  utils.py
lart_research_client/atolc/: __init__.py  patterns.py
lart_research_client/atolc/data/: dataLog.txt
lart_research_client/atolc/versions/: CymEng_Cym_GB.json  CymEng_Eng_GB.json  EngZzz_Eng_GB.json  LmoIta_Ita_IT.json  LtzGer_Ger_BE.json  __init__.py
lart_research_client/booteel/: __init__.py
lart_research_client/config/: __init__.py
lart_research_client/consent/: __init__.py  consentLog.txt
lart_research_client/consent/versions/: CymEng_Eng_GB.atolc.json  LtzGer_Ger_BE.atolc.json
lart_research_client/datavalidator/: __init__.py  exceptions.py  patterns.py  schemas.py  types.py  validation.py
lart_research_client/lsbqrml/: __init__.py  _pydantique.py  dataschema.py  eel.py  patterns.py
lart_research_client/lsbqrml/versions/: CymEng_Cym_GB.json  CymEng_Eng_GB.json  EngOther_Eng_GB.json  GswGer_Ger_DE.json  LmoIta_Ita_IT.json  LtzGer_Ger_BE.json  __init__.py
lart_research_client/memorygame/: __init__.py  dataschema.py  eel.py  patterns.py
lart_research_client/memorygame/versions/: CymEng_Eng_GB.json  LmoIta_Ita_IT.json  LtzGer_Ger_BE.json
lart_research_client/mgt/: READ ME.txt  __init__.py  dataschema.py  eel.py  patterns.py
lart_research_client/mgt/data/: dataLog.txt
lart_research_client/mgt/versions/: CymEng_Cym_GB.json  CymEng_Eng_GB.json  EngGen_Eng_GB.json  EngZzz_Eng_GB.json  Ger_Zzz_Ger_DE.json  Ita-Zzz_Ita_IT.json  LmoIta_Ita_IT.json  LtzGer_Ger_BE.json
lart_research_client/mgt2/: __init__.py  dataschema.py  eel.py
lart_research_client/mgt2/versions/: CymEng_Eng_GB.json  __init__.py
lart_research_client/settings/: eel.py
lart_research_client/web/app/: base.html  index.html  lart_macros.html
lart_research_client/web/css/: lart-custom.css
lart_research_client/web/img/: setupicon.svgz
lart_research_client/web/js/: booteel.js  lart.js  lsbq-rml.js  mgt.js
lart_survey_client/: __init__.py  _schematest.py  booteel.py  config.py  lsbqrml.py  utils.py
lart_survey_client/atolc/: __init__.py  dataLog.txt
lart_survey_client/atolc/data/: dataLog.txt
lart_survey_client/datavalidator/: __init__.py  exceptions.py  patterns.py  schemas.py
lart_survey_client/lsbqrml/: __init__.py  eel.py
lart_survey_client/lsbqrml/versions/: CymEng_Eng_GB.json  LmoIta_Ita_IT.json
lart_survey_client/web/: index.html  main.html
lart_survey_client/web/app/: base.html  index.html  lart_macros.html  main-entry.html
lart_survey_client/web/atol-c/: index.html  part1.html
lart_survey_client/web/css/: datavalidator.css  lart-custom.css
lart_survey_client/web/js/: booteel.js  laart-beel.js  lart-forms.js  lart.js  lsbq-rml.js
lart_survey_client/web/templates/: base.html  (+1 more)
research_assistant/: __init__.py  app.py  task_api.py  utils.py
research_assistant/agt/: patterns.py
research_assistant/atolc/: __init__.py
research_assistant/booteel/: __init__.py  eel_api.py  errors.py  task_api.py  utils.py
research_assistant/conclusion/: __init__.py
research_assistant/config/: __init__.py
research_assistant/consent/: __init__.py
research_assistant/datamodels/: __init__.py  models.py  patterns.py  types.py  utils.py
research_assistant/datavalidator/: exceptions.py  patterns.py  schemas.py  types.py  validation.py
research_assistant/lsbq/: eel.py
research_assistant/memorytask/: __init__.py  datamodel.py  eel.py
research_assistant/settings/: __init__.py  eel.py
research_assistant/tasks/: __init__.py
research_assistant/web/: index.html
research_client/: __init__.py  __main__.py  app.py  utils.py
research_client/agt/: __init__.py  dataschema.py  eel.py
research_client/atolc/: __init__.py  testPyt.py
research_client/conclusion/: __init__.py  eel.py
research_client/config/: __init__.py
research_client/consent/: __init__.py
research_client/datavalidator/: schemas.py
research_client/lsbq/: dataschema.py  eel.py  patterns.py
research_client/lsbqrml/: eel.py
research_client/memorygame/: __init__.py  eel.py
research_client/mgt/: dataschema.py  eel.py
research_client/settings/: __init__.py  eel.py
research_client/web/: index.html
tests/: __init__.py
(+340 files in other folders)
