[metadata]
version = 0.4.3
name = research_client
author = Florian Breit, Marco Tamburelli
author_email = f.breit@bangor.ac.uk
description = research-client is now lart-research-assistant.
long_description = file: README.rst
license = AGPLv3-or-later OR EUPL-1.2+
license_files =
  LICENSE
  LICENSE.AGPL-3.0
  LICENSE.EUPL-1.2
url = https://github.com/lart-bangor/research-assistant
project_urls =
  PyPI = https://pypi.org/project/lart-research-assistant/
  Documentation = https://lart.readthedocs.io/projects/research-assistant
  Bug Tracker = https://github.com/lart-bangor/research-assistant/issues
  Support = https://github.com/lart-bangor/research-assistant/discussions
  Source = https://github.com/lart-bangor/research-assistant
classifiers =
  Development Status :: 7 - Inactive

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
  lart-research-assistant >0.4.2
