[metadata]
version = 0.5.2
name = lart-research-assistant
author = Florian Breit, Marco Tamburelli
author_email = f.breit@bangor.ac.uk
description = An app that aims to make life easier for researchers working on bilingualism, sociolinguistics, language attitudes, and regional/minority/minoritized languages.
long_description = file: README.rst
license = AGPLv3-or-later OR EUPL-1.2+
license_files =
  LICENSE
  LICENSE.AGPL-3.0
  LICENSE.EUPL-1.2
url = https://github.com/lart-bangor/research-assistant
project_urls =
  Documentation = https://research-assistant.readthedocs.io/
  Bug Tracker = https://github.com/lart-bangor/research-assistant/issues
  Support = https://github.com/lart-bangor/research-assistant/discussions
  Source = https://github.com/lart-bangor/research-assistant
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Education
  Intended Audience :: Science/Research
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
  Natural Language :: English
  Natural Language :: German
  Natural Language :: Italian
  Natural Language :: Greek
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: Microsoft :: Windows :: Windows 11
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python :: 3.10
  Programming Language :: JavaScript
  Topic :: Scientific/Engineering
  Topic :: Sociology
  Topic :: Text Processing :: Linguistic
  Topic :: Utilities

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
  greenlet <2.0.0
  gevent <22.10.0
  eel[jinja2] ==0.16.0
  platformdirs ==3.2.0

[options.package_data]
* =
  *.json
research_assistant =
  web/**

[options.entry_points]
console_scripts =
  research-assistant = research_assistant.app:main

[app.options]
name = Research Assistant
author = L’ART
long_author = Bangor University Language Attitudes Research Team
qualified_pkg_name = research_assistant

[flake8]
max-line-length=100
max-complexity=6
inline-quotes=double
docstring-convention=google
